# projectservice/src/main/java/at/fhv/layblar/domain/model/LabeledData.java
@@ -3,10 +3,16 @@ package at.fhv.layblar.domain.model;
 import java.time.LocalDateTime;
 import java.util.List;
 
+import org.hibernate.annotations.JdbcTypeCode;
+import org.hibernate.type.SqlTypes;
+
 import at.fhv.layblar.commands.AddLabeledDataCommand;
+import at.fhv.layblar.commands.RemoveLabeledDataCommand;
+import at.fhv.layblar.commands.UpdateLabeledDataCommand;
 import at.fhv.layblar.events.LabeledDataAddedEvent;
 import at.fhv.layblar.events.LabeledDataRemovedEvent;
 import at.fhv.layblar.events.LabeledDataUpdatedEvent;
+import at.fhv.layblar.utils.exceptions.LabeledDataAlreadyRemovedException;
 import io.quarkus.hibernate.orm.panache.PanacheEntityBase;
 import jakarta.persistence.Entity;
 import jakarta.persistence.Id;
@@ -16,28 +22,45 @@ public class LabeledData extends PanacheEntityBase {
 
     @Id
     public String labeledDataId;
-    public String labelId;
     public String householdId;
-    public String projectId;
-    public String deviceId;
+    @JdbcTypeCode(SqlTypes.JSON)
+    public Device device;
+    @JdbcTypeCode(SqlTypes.JSON)
     public List<SmartMeterData> smartMeterData;
     public LocalDateTime createdAt;
+    public Boolean isRemoved;
 
     public LabeledDataAddedEvent process(AddLabeledDataCommand command) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'process'");
+        return LabeledDataAddedEvent.create(command);
     }
+
+    public LabeledDataUpdatedEvent process(UpdateLabeledDataCommand command) throws LabeledDataAlreadyRemovedException {
+        if(isRemoved){
+            throw new LabeledDataAlreadyRemovedException();
+        }
+        return LabeledDataUpdatedEvent.create(command, this);
+    }
+
+    public LabeledDataRemovedEvent process(RemoveLabeledDataCommand command) {
+        return LabeledDataRemovedEvent.create(command, this);
+    }
+
+
     public void apply(LabeledDataAddedEvent event) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'apply'");
+        this.labeledDataId = event.getLabeledDataId();
+        this.device = event.getDevice();
+        this.householdId = event.getHouseholdId();
+        this.smartMeterData = event.getSmartMeterData();
+        this.createdAt = event.getCreatedAt();
+        this.isRemoved = false;
     }
     public void apply(LabeledDataUpdatedEvent event) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'apply'");
+        this.device = event.getDevice();
+        this.smartMeterData = event.getSmartMeterData();
     }
     public void apply(LabeledDataRemovedEvent event) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'apply'");
+        this.isRemoved = true;
     }
+
     
 }
